--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -48,8 +48,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ github.event.head_commit.message }}
+          release_name: Release ${{ github.event.head_commit.message }}
           draft: false
           prerelease: false
 
@@ -61,7 +61,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./assetpack.zip
-          asset_name: ${{ github.event.repository.name }}-$github.event.commits[0].message-mc${{ steps.mc_version.outputs.MC_VERSION }}-resourcepack.zip
+          asset_name: ${{ github.event.repository.name }}-${{ github.event.head_commit.message }}-mc${{ steps.mc_version.outputs.MC_VERSION }}-resourcepack.zip
           asset_content_type: application/zip
       - name: Upload datapack release asset
         uses: actions/upload-release-asset@v1
@@ -71,5 +71,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./datapack.zip
-          asset_name: ${{ github.event.repository.name }}-$github.event.commits[0].message-mc${{ steps.mc_version.outputs.MC_VERSION }}-datapack.zip
+          asset_name: ${{ github.event.repository.name }}-${{ github.event.head_commit.message }}-mc${{ steps.mc_version.outputs.MC_VERSION }}-datapack.zip
           asset_content_type: application/zip
