--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -48,8 +48,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.event.head_commit.message }}
-          release_name: Release ${{ github.event.head_commit.message }}
+          tag_name: ${{ github.event.commits[0].message }}
+          release_name: Release ${{ github.event.commits[0].message }}
           draft: false
           prerelease: false
 
