--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,6 +5,11 @@ on:
     - "main"
   page_build:
   workflow_dispatch:
+    inputs:
+      tag:
+        description: 'version of the data pacl'
+        required: true
+        default: 'v1.0'
 
 jobs:
   create_data_pack:
@@ -48,8 +53,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.event.commits[0].message }}
-          release_name: Release ${{ github.event.commits[0].message }}
+          tag_name: ${{ github.event.inputs.tag }}
+          release_name: Release ${{ github.event.inputs.tag }}
           draft: false
           prerelease: false
 
@@ -61,7 +66,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./assetpack.zip
-          asset_name: ${{ github.event.repository.name }}-${{ github.event.head_commit.message }}-mc${{ steps.mc_version.outputs.MC_VERSION }}-resourcepack.zip
+          asset_name: ${{ github.event.repository.name }}-${{ github.event.inputs.tag }}-mc${{ steps.mc_version.outputs.MC_VERSION }}-resourcepack.zip
           asset_content_type: application/zip
       - name: Upload datapack release asset
         uses: actions/upload-release-asset@v1
@@ -71,5 +76,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./datapack.zip
-          asset_name: ${{ github.event.repository.name }}-${{ github.event.head_commit.message }}-mc${{ steps.mc_version.outputs.MC_VERSION }}-datapack.zip
+          asset_name: ${{ github.event.repository.name }}-${{ github.event.inputs.tag }}-mc${{ steps.mc_version.outputs.MC_VERSION }}-datapack.zip
           asset_content_type: application/zip
