--- a/META-INF/mods.toml
+++ b/META-INF/mods.toml
@@ -3,6 +3,7 @@ loaderVersion="[28,)"
 license="Custom"
 logoFile="pack.png"
 logoBlur=false
+showAsDataPack=true
 
 [[mods]]
 modId="moremobs"
@@ -13,18 +14,19 @@ No Resource pack needed!
 
 §lSupported Entities:§r Zombies, Husks, Drowned, Skeletons, Strays, Wither Skeletons, Mooshrooms, Piglins, Pillagers, Evokers and Vindicators
 
-Execute the command §o/function §omore_mobs:settings§r for a world-specific settings menu and/or install MidnightLib for global settings accross all worlds.
+Execute the command §o/function §omore_mobs:settings§r for a world-specific settings menu and/or install MidnightLib for global settings across all worlds.
 '''
 authors="Tschipcraft"
-displayURL="https://tschipcraft.ddns.net/more_mobs.html"
+displayURL="https://modrinth.com/mod/HJR6V0I2"
 issueTrackerURL="https://github.com/Tschipcraft/more_mobs/issues"
-updateJSONURL="https://api.modrinth.com/updates/HJR6V0I2/forge_updates.json"
+updateJSONURL="https://api.modrinth.com/updates/HJR6V0I2/forge_updates.json?forge=only"
 displayTest="IGNORE_SERVER_VERSION"
+features={ java_version = "[8,)" }
 
 [[dependencies.moremobs]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.14,)"
+    versionRange="${mc_version_range_forge}"
     ordering="NONE"
     side="BOTH"
 
@@ -34,6 +36,7 @@ displayTest="IGNORE_SERVER_VERSION"
     versionRange="[1.0.0,)"
     ordering="NONE"
     side="BOTH"
+    referralUrl="https://modrinth.com/mod/codAaoxh/versions?l=forge"
 
 [modproperties.moremobs]
     catalogueItemIcon="pack.png"
