Add support for 1.21.9
- Added support for Minecraft 1.21.9
  - Updated to work with the new pack.mcmeta syntax
  - Bumped pack format and protocol version
- Fixed oversight preventing the second Frozen Zombie variant from spawning (closes #27)
- Formatted CI workflow failure message

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -310,6 +310,6 @@ jobs:
             <img alt="❌ Error" src="https://raw.githubusercontent.com/Mqxx/GitHub-Markdown/main/blockquotes/badge/dark-theme/error.svg">
           </picture><br>
 
-          The build v${{ env.TAG }} for mc${{ env.MC_HUMAN_VERSION_RANGE }} failed! Please check the action logs for details.
+          The build **v${{ env.TAG }}** for **Minecraft ${{ env.MC_HUMAN_VERSION_RANGE }}** failed! Please check the action logs for details.
           EOF
           fi
