--- a/META-INF/mods.toml
+++ b/META-INF/mods.toml
@@ -26,7 +26,7 @@ features={ java_version = "[8,)" }
 [[dependencies.moremobs]]
     modId="minecraft"
     mandatory=true
-    versionRange="${mc_version_range_forge}"
+    versionRange="[1.17,1.21.5]"
     ordering="NONE"
     side="BOTH"
 
